--- a/style.css
+++ b/style.css
@@ -1,40 +1,106 @@
+* {
+	box-sizing: border-box;
+}
+
+body {
+	background-color: black;
+	color: white;
+	font-family: 'Amatic SC', cursive;
+}
+
+h1, h2 {
+	margin: 20px 0 10px 0;
+}
+
+h2 {
+	font-size: 40px;
+}
+
+.netflix {
+	color: #da1921;
+}
+
+.stan {
+	color: #0073ff;
+}
+
 main {
 	display: flex;
 }
 
+header {
+	text-align: center;
+}
+
+header img {
+	width: 200px;
+	height: auto;
+	padding: 0 30px;
+}
+
+.player-headings {
+	display: flex;
+	justify-content: space-between;
+	padding: 0 30px;
+}
+
 .player {
-	width: 20%;
+	width: 30%;
 	height: 100px;
 }
 
-#p1 {
-	background-color: red;
-}
-
-#p2 {
-	background-color: blue;
+.game-board {
+	height: 450px;
+	width: 40%;
 }
 
 .row {
 	display: flex;
 	width: 100%;
-	height: 100px;
+	height: 150px;
 }
 
 .square {
 	height: 100%;
-	width: 100px;
-	background-color: black;
-	border: 4px white solid;
+	width: 33%;
+	background-color: white;
+	border: 5px black solid;
 }
 
+footer {
+	text-align: center;
+	font-size: 20px;
+}
+
+.restart {
+	font-size: 40px;
+	text-align: center;
+}
+
+/* classes used in events */
+
 .chosenp1 {
-	background-color: red;
+	background-color: #da1921;
 }
 
 .chosenp2 {
-	background-color: blue;
+	background-color: #0073ff;
 }
+
+#p1.your-turn {
+	background-color: #da1921;
+}
+
+#p2.your-turn {
+	background-color: #0073ff;
+}
+
+.your-turn {
+	margin-top: 100px;
+}
+
+
+
 
 
 
