--- a/style.css
+++ b/style.css
@@ -104,7 +104,7 @@ footer {
 	width: 100%;
 	z-index: 1;
 	position: absolute;
-	background-color: #da1921;
+	background-color: rgba(218,25,33,.95);
 	font-size: 50px;
 	text-align: center;
 }
@@ -114,7 +114,7 @@ footer {
 	width: 100%;
 	z-index: 1;
 	position: absolute;
-	background-color: #0073ff;
+	background-color: rgba(0, 115, 255,.95);
 	font-size: 50px;
 	text-align: center;
 }
@@ -129,6 +129,16 @@ footer {
 	display: none;
 }
 
+.restart {
+	height: 50px;
+	border-radius: 5px;
+}
+
+.restart:hover {
+	background-color: white;
+	color: black;
+	border: white 5px solid;
+}
 
 
 
