about to add show image functionality

--- a/style.css
+++ b/style.css
@@ -65,6 +65,14 @@ header img {
 	width: 33%;
 	background-color: white;
 	border: 5px black solid;
+	border-radius: 10px;
+	display: flex;
+	align-items: center;
+}
+
+.square img {
+	width: 90%;
+	margin: 0 auto;
 }
 
 footer {
@@ -123,21 +131,20 @@ footer {
 .win-screen-netflix img {
 	width: 500px;
 	height: auto;
+	border: 3px solid white;
 }
 
 .hidden {
 	display: none;
 }
 
-.restart {
+/*.restart {
 	height: 50px;
-	border-radius: 5px;
-}
+}*/
 
 .restart:hover {
-	background-color: white;
-	color: black;
-	border: white 5px solid;
+	border-bottom: 4px solid white;
+	font-size: 50px;
 }
 
 
