fixed class names

--- a/style.css
+++ b/style.css
@@ -87,11 +87,11 @@ footer {
 
 /* classes used in events */
 
-.chosenp1 {
+.chosen-netflix {
 	background-color: #da1921;
 }
 
-.chosenp2 {
+.chosen-stan {
 	background-color: #0073ff;
 }
 
