--- a/style.css
+++ b/style.css
@@ -63,7 +63,7 @@ header img {
 .square {
 	height: 100%;
 	width: 33%;
-	background-color: white;
+	background-image: url("images/static.jpeg");
 	border: 5px black solid;
 	border-radius: 10px;
 	display: flex;
@@ -71,7 +71,7 @@ header img {
 }
 
 .square img {
-	width: 90%;
+	width: 95%;
 	margin: 0 auto;
 }
 
@@ -89,10 +89,12 @@ footer {
 
 .chosen-netflix {
 	background-color: #da1921;
+	background-image: none;
 }
 
 .chosen-stan {
 	background-color: #0073ff;
+	background-image: none;
 }
 
 #p1.your-turn {
