--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ h1, h2 {
 }
 
 h2 {
-	font-size: 40px;
+	font-size: 30px;
 }
 
 .netflix {
@@ -77,7 +77,7 @@ header img {
 
 footer {
 	text-align: center;
-	font-size: 20px;
+	font-size: 30px;
 }
 
 /* classes used in events */
@@ -92,11 +92,11 @@ footer {
 	background-image: none;
 }
 
-#p1.your-turn {
+#netflix.your-turn {
 	background-color: #da1921;
 }
 
-#p2.your-turn {
+#stan.your-turn {
 	background-color: #0073ff;
 }
 
@@ -142,11 +142,16 @@ footer {
 	width: 33%;
 }
 
-.restart p:hover {
+.restart p:hover,
+.draw p:hover {
 	border-bottom: 4px solid white;
 	font-size: 70px;
 }
 
+/*.draw p {
+	font-size: 40px;
+	margin: 0 auto;
+}*/
 
 
 
