--- a/style.css
+++ b/style.css
@@ -82,6 +82,16 @@ footer {
 	font-size: 30px;
 }
 
+footer a {
+	text-decoration: none;
+	color: white;
+}
+
+footer a:hover {
+	text-decoration: underline;
+	font-size: 40px;
+}
+
 /* classes used in events */
 
 .chosen-netflix {
@@ -116,10 +126,12 @@ footer {
 
 #player-netflix.your-turn p {
 	background-color: rgb(218,25,33);
+	padding: 10px;
 }
 
 #player-stan.your-turn p {
 	background-color: rgb(0, 115, 255);
+	padding:10px;
 }
 
 .wins-netflix, 
