--- a/style.css
+++ b/style.css
@@ -138,7 +138,7 @@ footer a:hover {
 .wins-netflix, 
 .wins-stan {
 	font-size: 50px;
-	margin-bottom: 100px;
+	margin-bottom: 60px;
 }
 
 .wins-netflix {
@@ -203,6 +203,11 @@ footer a:hover {
 .choose-service img:hover {
 	width: 300px;
 	height: auto;
+}
+
+.wins-stan span,
+.wins-netflix span {
+	font-size: 70px;
 }
 
 /*.draw p {
