--- a/style.css
+++ b/style.css
@@ -181,6 +181,7 @@ footer a:hover {
 	background-color: #ff4f51;
 	color: black;
 	font-weight: 800;
+	padding-bottom: 100px;
 }
 
 .win-screen-stan img,
